# mate-vinagre-applet

./: AUTHORS  ChangeLog  NEWS  README  README.md  configure.ac
data/: Makefile.am  org.mate.panel.VinagreApplet.mate-panel-applet.in  org.mate.panel.applet.VinagreAppletFactory.service.in
debian/: changelog  control  copyright
src/: Makefile.am  config.h  config.h.in  vinagre-applet.c  vinagre-applet.h
